handle different screen sizes

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
   <head>
     <title>Memory</title>
     <link type="text/css" rel="stylesheet" media="screen" href="screen.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   </head>
   <body>
-    <div id="board">
-      Loading..
-    </div>
+    <div id="board"></div>
 
     <script type="text/javascript" src="js/memory/goog/base.js"></script>
     <script type="text/javascript" src="js/memory.js"></script>
