--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   </head>
   <body>
-    <div id="board"></div>
+    <div id="board" style="display:none">
+    </div>
+
+    <div id="cover" style="display:none">
+      <a href="#" id="play-link">Play!</a>
+    </div>
 
     <script type="text/javascript" src="js/memory/goog/base.js"></script>
     <script type="text/javascript" src="js/memory.js"></script>
